Fix outline on safari

--- a/src/styles/mainStyle.scss
+++ b/src/styles/mainStyle.scss
@@ -175,7 +175,7 @@ form {
     width: 100%;
     border-radius: 16px;
     border: none;
-    outline: 1px solid $khaki-web;
+    box-shadow: 0px 0px 2px 1px $khaki-web;
     &:not(.tox){
       padding: 4px 4px 4px 10px;
     }
